# SCOTCH

./: DataLoader.py  Example.ipynb  Example_A.html  NMTF.html  NMTF.py  README.html  README.md  SCOTCH.html  SCOTCH.py  convertTextToPT.py  genindex.html  index.html  initialize.html  initialize.py  modules.html  py-modindex.html  runNMTF.py  run_example.sh  run_sim_example.html  search.html  setup.py  utilities.html
Examples/: Example.ipynb  Example_A.ipynb
PyEnrichAnalyzer/: CMakeLists.txt  Framework.C  Framework.H  GOMgr.C  GOMgr.H  Graph.C  SubGraphMgr.C  SubGraphMgr.H  ValueItem.C  ValueItem.H  enrichAnalyzer.H  enrichAnalyzer.cpp  setup.py
PyEnrichAnalyzer/pyEnrichAnalyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SCOTCH/: DataLoader.py  NMTF.py  SCOTCH.py  __init__.py  initialize.py
_modules/: NMTF.html  SCOTCH.html  convertTextToPT.html  index.html  initialize.html  runNMTF.html
_sources/: Example_A.rst.txt  NMTF.rst.txt  README.md.txt  SCOTCH.rst.txt  index.rst.txt  initialize.rst.txt  modules.rst.txt  run_sim_example.rst.txt
_static/: Example_A.html  documentation_options.js
docs/source/: README.md  SCOTCH.rst  conf.py  utilities.rst
docs/source/_static/: Example_A.html
docs/source/notebooks/: Example.ipynb
docs/source/notebooks/test/: A.txt
test/: .git_ignore  S.txt  U.txt  V.txt
test_condor/: run_scotch.sh
tests/: test_DataLoader.py  test_DataLoaderCpp.py  test_NMTF.py  test_SCOTCH.py  test_initialize.py
